# video-dubbing-pipeline

./: MULTILINGUAL_GUIDE.md  MULTILINGUAL_SUMMARY.md  PUSH_INSTRUCTIONS.md  README.md
src/: .env.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  test_async.py  test_multilingual.py
src/docs/: API_ASYNC.md  ASYNC_EXAMPLES.md  ASYNC_GUIDE.md  DOCS_INDEX.md  MULTILINGUAL_GUIDE.md  MULTILINGUAL_SUMMARY.md  README.md
src/dubber/: __init__.py  cli.py  cli_async.py  cost.py  io_ffmpeg.py  models.py  polish.py  scenes.py  sentences.py  srt_utils.py  stt.py  timeline.py  timeline_async.py  translation.py  tts.py  tts_async.py  youtube.py
src/tests/: __init__.py  test_sentences.py  test_srt_utils.py  test_youtube.py
