[tool.poetry]
name = "video-dubbing-pipeline"
version = "0.1.0"
description = "Modular video dubbing pipeline with TTS and YouTube description generation"
authors = ["@d.fershtater <goblinx99@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "dubber"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openai = "^1.108.0"
pydub = "^0.25.1"
tqdm = {extras = ["asyncio"], version = "^4.67.1"}
python-dotenv = "^1.1.1"
faster-whisper = "^1.2.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pyright = "^1.1.400"
pytest = "^8.3.0"

[tool.poetry.scripts]
dubber = "dubber.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]  # Only basic errors, warnings, and pycodestyle
ignore = [
    "S101", "PLR0913", "PLR0912", "PLR0915", "COM812", "ISC001",
    "G004",  # f-string logging
    "FBT001", "FBT002", "FBT003",  # boolean args
    "PLR2004",  # magic numbers
    "PTH118", "PTH123", "PTH110",  # pathlib suggestions
    "BLE001",  # broad exception handling
    "TRY003", "EM101", "EM102",  # exception messages
    "C901",  # complexity
    "ARG001",  # unused args
    "F841",  # unused variables
    "E501",  # line length
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
pythonVersion = "3.11"
